--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
-/* font-family: 'Nanum Gothic', sans-serif; */
 
 *, ::before, ::after {
   box-sizing: border-box;
@@ -17,11 +16,9 @@ body {
   width: 100%;
   min-height: 2.75rem;
   background-color: #1D1D1D;
-  /* position: fixed; */
 }
 
 .nav-center {
-  /* border: 2px solid blue; */
   display: flex;
   justify-content: space-between;
   margin: 0 4rem;
@@ -40,7 +37,7 @@ body {
 
 main {
   background-color: #0D0D0D;
-  height: auto; /*NTAR GANTI JADI AUTO*/
+  height: auto; 
   width: 100%;
 }
 
@@ -55,21 +52,18 @@ main {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  /* border: 2px solid red; */
   height: 10rem;
   width: 100%;
 }
 
 .desc-topics-hr {
   margin-top: 3rem;
-  /* height: 1px; */
   width: 17rem;
   color: rgb(62, 62, 77);
 }
 
 .title h3 {
   margin-top: 2rem;
-  /* border: 2px solid yellow; */
   font-size: 2.5rem;
   font-weight: 700;
   color: #ffffff;
@@ -80,7 +74,6 @@ main {
  font-size: 1rem;
  color: #AEAEB0;
  font-family: 'Nanum Gothic', sans-serif; 
- /* border: 2px solid blue; */
 }
 .second {
   height: auto;
@@ -89,7 +82,6 @@ main {
   background-color: #0D0D0D;
   margin: 0 3rem;
   height: auto;
-  /* border: 2px solid yellow; */
 }
 
 .topics ul {
@@ -97,7 +89,6 @@ main {
   margin-top: 1.1rem;
   font-size: 1rem;
   list-style: none;
-  /* border: 2px solid red; */
   width: 100%;
   
 }
@@ -109,7 +100,6 @@ main {
 
 .topics-list li {
   margin-bottom: 0.75rem;
-  /* border: 2px solid red; */
 }
 
 .topics-list li > .list:active {
@@ -121,7 +111,6 @@ main {
 }
 
 .rows {
-  /* border: 2px solid blue; */
   height: auto;
   
 }
@@ -256,7 +245,6 @@ h2 {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 1rem;
-      /* padding-top: 1px; */
    }
 
    .content-item {
@@ -267,7 +255,6 @@ h2 {
      margin-bottom: 1rem;
      margin-top: 3rem;
      font-size: 2.5rem;
-     /* border: 2px solid red; */
    }
    .desc-topics-hr {
      display: none;
@@ -307,7 +294,6 @@ h2 {
 
   .rows {
     margin: 0 auto;
-    /* width: 80rem; */
   }
   
   .rows h2 {
